rotate video (set meta data to 0) todo: check other rotations

--- a/RotateVideo/appsettings.json
+++ b/RotateVideo/appsettings.json
@@ -1,6 +1,6 @@
 {
 
   "ffmpeg": "lib/ffmpeg-20200519-74dfc88-win64-static/bin/ffmpeg.exe",
-  "ffprobe": "lib/ffmpeg-20200519-74dfc88-win64-static/bin/ffprobe.exe"
-
+  "ffprobe": "lib/ffmpeg-20200519-74dfc88-win64-static/bin/ffprobe.exe",
+  "outputpath":  "{inputpath}/output"
 }
